Fix Html Overflow - Fix html overflow hidden to scrollable

--- a/assets/app/css/main.scss
+++ b/assets/app/css/main.scss
@@ -8,10 +8,6 @@
 /* --------------------------
         LAYOUT
 ----------------------------*/
-html {
-    overflow: hidden;
-}
-
 // Modules will scale with document
 .page-header {
     font-size: 1rem;
